# QuantumixClient

./: README.md  index.html  package-lock.json  package.json
src/: Detail.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: exceptions.rs  main.rs
src-tauri/src/api/: account.rs
src/assets/: base.css  main.css
src/components/: Detail.vue  Main.vue  PreLoad.vue
src/components/Detail/: Project.vue  Task.vue  Todo.vue
src/components/Login/: Description.vue  Login.vue
vue-project/: package-lock.json  运行.bat
vue-project/src/: App.vue
vue-project/src/components/: Project.vue  Task.vue  Todo.vue
